<resources>
    <string name="app_name">Love Rekindle</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_chat">Counselling</string>
    <string name="title_profile">Profile</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="explore_fragment_label">Explore Fragment</string>
    <string name="medial_detail_fragment_label">MediaDetail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_audio">Audio</string>
    <string name="title_ebook">E-book</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_new_media">Add New Media</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="btn_select_cover_image">Select Cover Image</string>
    <string name="etxt_media_title">Title</string>
    <string name="etxt_release_date">Release Date</string>
    <string name="etxt_media_author">Author</string>
    <string name="etxt_media_price">Price</string>
    <string name="etxt_media_length">Length</string>
    <string name="etxt_about_book">About Book</string>
    <string name="btn_media_upload">Upload</string>
    <string name="txt_about_book_dummy">God\'s got many titles: Jehovah, Jehovah-Jireh, Rapha, Manasses, oh, many. He\'s got seven compound redemptive Names. He\'s got many titles: Rose of Sharon, Lily of the Valley, Morning Star, Father, Son, Holy Ghost, all that; but He\'s got one human Name. God only had one Name, and that was the Lord Jesus Christ.When He was born Christ the Lord, eight days later the Holy Spirit called His Name Jesus. His mother had Him circumcised, and called Him Jesus. He was borned a Christ, like I was borned a Branham. I was a Branham when I was born and given the name of William. Amen. And He was born Christ the Saviour, and when He was eight days old He was given the Name of Jesus. And He was the Lord of glory made manifest, so He is the Lord Jesus Christ, the God of glory made manifest among us. Oh, there He is. If you show me the page or anything, you write it and lay it up on here for me tonight, and I\'ll walk out of this church saying, I am a hypocrite; I have taught people wrong; if you can show me one text of Scripture or bring me one history, authentic history, that\'ll show me that where that people ever baptized in the Bible in the name of Father, Son, Holy Ghost; or bring me one script or one book of history, one page, one quotation in history where anybody was ever baptized in the name of Father, Son, and Holy Ghost until the Nicene Council of the Catholic church, come bring it to me; and I\'ll pin a sign on my back and walk through Jeffersonville, and you behind with a horn, blowing; I\'ll put on there, A false prophet, misleading the people. And, pastor, if you\'re here this morning and do that, you\'d ought to let me do that to you. See? Shows how many be afraid.</string>
    <string name="txt_about_book_title">About Book</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="log_in">log in</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">user@usermail.com</string>
    <string name="text_btn_update">Update</string>
    <string name="price_with_sign">\u20A6 %1$.2f</string>
    <string name="txt_free">FREE</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="more">More</string>
    <string name="category_title">Category Title</string>
    <string name="desc_book_cover_image">Book Cover Image</string>
    <string name="title_action_unfilter">Remove Filter</string>
    <string name="about_app">About App</string>
    <string name="request_a_counsellor">Request A Counsellor</string>
    <string name="message_a_counsellor">Message A Counsellor...</string>
    <string name="names">Names</string>
    <string name="title_media_preview">Media Preview</string>
    <string name="title_media_gallery">Media Gallery</string>
    <string name="action_title_share">Share</string>
    <string name="single_review_comment">Very empowering book recommended for everyone who is struggling which finances finished the book and past to my wife to you as well.</string>
    <string name="listen_now">Listen Now</string>
    <string name="read_now">Read Now</string>
    <string name="votes_text">%1$d supports</string>


    <array name="categories">
        <item>Godly Parenting</item>
        <item>Spiritual Growth</item>
        <item>Marriage and Relationship</item>
    </array>

    <!--    Do not change this @applicationID because it will affect a lot of constants.
            Use it when you want to create unique keys that are related to the application.
    -->
    <string name="applicationIDBase">com.reconciliationhouse.android.loverekindle.%s</string>
    <string name="empty_list_text">There\'s nothing to show</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="sign_up">Sign up</string>
    <string name="apply_as_a_counsellor">Apply as a Counsellor</string>
    <string name="no_counsellor">No Counsellor is assigned yet</string>
    <string name="review_thumbs_up_desc">Support Review</string>
    <string name="write_you_review">Write you Review</string>
    <string name="txt_reviews_title">Reviews (%d)</string>
    <string name="txt_related_media_title">Related Media (%d)</string>
    <string name="txt_edit_review_title">Edit Review</string>
    <string name="counsellors">Counsellors</string>
    <string name="post">POST</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="local_data_prefs">LocalData_Prefs</string>
    <string name="notification_channel">AUDIO_PLAYER_CHANNEL_ID</string>
    <string name="notification_channel_description">Love Rekindle Audio Book Player Notification</string>
    <string name="label_next">Next</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_previous">Previous</string>
    <string name="casting_to_device">Casting to %s</string>
    <string name="stop_casting">Stop Casting</string>
    <string name="previous_page_desc">Go to previous page</string>
    <string name="next_page_desc">Go to next page</string>
</resources>