<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.reconciliationhouse.android.loverekindle.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.reconciliationhouse.android.loverekindle.ui.chat.ChatCategoriesFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/chat_categories_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.reconciliationhouse.android.loverekindle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
