<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.reconciliationhouse.android.loverekindle.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.reconciliationhouse.android.loverekindle.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_navigation_chat_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.reconciliationhouse.android.loverekindle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_rechargeFragment"
            app:destination="@id/rechargeFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/rechargeFragment"
        android:name="com.reconciliationhouse.android.loverekindle.ui.recharge.RechargeFragment"
        android:label="recharge_fragment"
        tools:layout="@layout/recharge_fragment" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.reconciliationhouse.android.loverekindle.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.reconciliationhouse.android.loverekindle.SettingsFragment"
        android:label="settings_fragment"
        tools:layout="@layout/settings_fragment" />

</navigation>
