<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.auth.LoginFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient_bg_no_radius"
    >
    <!--    tools:showIn="@layout/activity_auth"-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/login_screen_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"

            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/identity_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/splash_icon"
                    android:layout_width="160dp"
                    android:layout_height="136dp"
                    android:src="@drawable/splashlogo" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="56dp"
                    android:fontFamily="@font/arima_madurai_bold"
                    android:gravity="center_horizontal|top"
                    android:text="Rekindle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:minHeight="130dp"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/text_input_email"
                    style="@style/AuthTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColorHint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="16dp"
                        android:hint="Email"
                        android:inputType="textEmailAddress"

                        android:textColor="@color/white"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    style="@style/AuthTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColorHint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="16dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/secondaryLightColor" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end"

                android:text="@string/forgot_pass" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/pre_main_button_style"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="12dp"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:text="@string/log_in" />


            <TextView

                style="@style/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:gravity="center"

                android:text="@string/sign_up_with" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />





        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:elevation="8dp"
        android:indeterminateTint="@android:color/white"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />
</FrameLayout>
</layout>