<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.SignUpFragment"
    >


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_no_radius"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_image"
                android:layout_width="150dp"

                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"


                android:src="@drawable/profile_picture_placeholder"
                app:civ_circle_background_color="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </de.hdodenhof.circleimageview.CircleImageView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/change_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_camera_black_24dp"
                app:backgroundTint="@color/white"
                app:elevation="4dp"
                app:fabSize="mini"
                app:layout_anchorGravity="end|top"


                app:layout_constraintBottom_toBottomOf="@+id/user_profile_image"
                app:layout_constraintEnd_toEndOf="@+id/user_profile_image"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/user_profile_image"

                app:tint="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/text_input_first_name"
                style="@style/AuthTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/secondaryLightColor"
                android:textColorHint="@color/secondaryLightColor"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_black"
                    android:drawablePadding="16dp"
                    android:hint="First And Last Name"
                    android:inputType="text"
                    android:textColor="@color/secondaryLightColor"
                    android:text=""

                     />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/text_input_email"
                style="@style/AuthTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:hintTextColor="@color/secondaryLightColor"
                android:textColorHint="@color/secondaryLightColor"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black"
                    android:drawablePadding="16dp"
                    android:hint="Email"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/secondaryLightColor"
                   />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/AuthTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/secondaryLightColor"
                android:textColorHint="@color/secondaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_outline_black"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/secondaryLightColor"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_re_type_password"
                style="@style/AuthTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/secondaryLightColor"
                android:textColorHint="@color/secondaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_outline_black"
                    android:drawablePadding="16dp"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/secondaryLightColor"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                style="@style/pre_main_button_style"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="12dp"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_re_type_password" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar

        android:layout_gravity="center"
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:indeterminateTint="@android:color/white"
        android:elevation="8dp"
        />
</FrameLayout>
</layout>